Intro: Fixed: There is a bug where if you just put the mouse over a piece and click over and over, the bucket continues to fill
Intro: Fixed: For vertical bars (and all representations), animating pieces should be in front instead of behind.
Intro: Fixed: Cake piece angle sometimes seems buggy
Intro: Fixed: Cake pieces are floating out of the bucket
Intro: Fixed: Cake pieces are too high--too close to the top control panel, move them down a bit
Intro: Fixed: Number line causes exception when dragging or clicking past the max
# 0.00.43 (61954) Feb 29, 2012
Intro: Made it so you cannot drag the bucket icon
Intro: Increased the bucket size by 35% vertically, downward
Intro: Stagger vertical and horizontal bars vertically in the buckets to make them more distinguishable
Intro: Moved the fraction control away from the left edge and closer to the bucket
Intro: Put more horizontal space between bucket icon and fraction icon on bucket
Intro: move max to upper right (right side of representation control panel).
Matching Game: Shrink values >1 more so they will both fit in the score box.
Matching Game: Added fraction representations for numbers > 1
Matching Game: Added audio buttons
Matching Game: Made audio off by default
Matching Game: Made black outline of "=" sign a bit thicker
Matching Game: Got rid of solid black "=" sign & click-to-toggle
Matching Game: Show the name of the next level
Matching Game: Fixed: Shouldn't be able to drag pieces out of the scoreboard
# 0.00.42 (61921) Feb 28, 2012
Moved the matching grid up a little to give it more negative space on the bottom
Added more levels and randomization
Fixed: make fractions sit on the scale instead of centered on it
# 0.00.41 (61879) Feb 28, 2012
Added prototype for matching game
Buffer audio to avoid mark/reset not supported error
# 0.00.40 (61737) Feb 24, 2012
Added special case for half-pies since they should be vertical instead of horizontal (like pies)
Added bucket/dragging for cake slices