@@ -1,3 +1,5 @@
+Intro: Applied workaround for other representations so they don't get out of sync
+Intro: Fixed more inter-representation synchronization
 Intro: Fixed: There is a bug where if you just put the mouse over a piece and click over and over, the bucket continues to fill
 Intro: Fixed: For vertical bars (and all representations), animating pieces should be in front instead of behind.
 Intro: Fixed: Cake piece angle sometimes seems buggy
